tests/tooling/fixtures/native/recovery/negative/negative_unary_plus_parser_missing_operand.objc3
// Expected diagnostic code(s): O3P103.
module NegativeUnaryPlusParserMissingOperand;

fn main() -> i32 {
  let value = +;
  return value;
}
